--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -12,9 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:paddingBottom="200dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
+        android:layout_gravity="start|top"
+        android:layout_marginBottom="170dp"
         />
 
     <TextView
@@ -39,42 +38,52 @@
         android:layout_marginTop="48dp"
         android:layout_marginStart="20dp"
         />
-    <TextView
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:keepScreenOn="true"
-        android:text="@string/unlimited_movies"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_gravity="center|top"
-        android:layout_marginTop="650dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:keepScreenOn="true"
-        android:text="@string/All_of_Boatflix"
-        android:textAlignment="center"
-        android:textColor="#C5C5C5"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_gravity="center|top"
-        android:layout_marginTop="720dp"
-        />
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/start_button"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center|top"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:text="@string/go"
-        android:textSize="25sp"
-        android:textColor="@color/white"
-        android:background="@drawable/round_button"
-        android:layout_marginTop="780dp"
-        />
+        android:layout_gravity="bottom|end"
+        android:background="#80000000"
+        android:layout_marginBottom="40dp"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:keepScreenOn="true"
+            android:text="@string/unlimited_movies"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="150dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:keepScreenOn="true"
+            android:text="@string/All_of_Boatflix"
+            android:textAlignment="center"
+            android:textColor="#C5C5C5"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="100dp"
+            />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/start_button"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center|bottom"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:text="@string/go"
+            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:background="@drawable/round_button"
+            android:layout_marginBottom="10dp"
+            />
+
+    </FrameLayout>
+
 
 </FrameLayout>
